--- a/cube_complete.html
+++ b/cube_complete.html
@@ -169,7 +169,7 @@ div.color {
 </div>
 
 <div id="buttons">
-<button onclick="solve()">Solve</button>
+
 <p>
 <button onclick="row1CV()" onmouseover="row1Hover()" onmouseleave="out()">row1</button>
 <button onclick="row1CCV()" onmouseover="row1Hover()" onmouseleave="out()">row1C</button>
@@ -773,8 +773,8 @@ function col6CCV(){
 }
 
 function solve(){
-	alert('ne');
-	/*var midBC = [9,32,29,26,23];
+	/*alert('ne');
+	var midBC = [9,32,29,26,23];
 	var sideBC = [2,4,6,8,20,31,44,33,17,28,41,30,14,25,38,27,11,22,35,24];
 
 	for(var i=1; i<=54; i++){
